fix: keyboard autocomplete
In most views it actually worked, but it printed a stacktrace to
stderr when confirming selection with return